new text on banner added

--- a/banner.playbook.yaml
+++ b/banner.playbook.yaml
@@ -21,7 +21,7 @@
                 consents to such monitoring and is advised that if such
                 monitoring reveals possible evidence of criminal activity,
                 system personnel may provide the evidence of such
-                monitoring to law enforcement officials.  Oh Yeah!
+                monitoring to law enforcement officials.
         ====================================================================
       state: present
 ...
