--- a/banner.playbook.yaml
+++ b/banner.playbook.yaml
@@ -24,5 +24,6 @@
                 monitoring to law enforcement officials.  New text here.
         ====================================================================
       state: present
+      # done.
 ...
 
